@@ -2,6 +2,7 @@
 [General]
 type=sf
 url=<http://sourceforge.net/tracker/index.php?func=browse&group_id=138511&atid=740882&set=any>
+path=/tmp/bicho/
 
 [DatabaseIn]
 db_driver_in=<mysql|postgres|sqlite>
